Permanent scrollbar to avoid nav jumping

--- a/static/styles.css
+++ b/static/styles.css
@@ -1,3 +1,8 @@
+html {
+  overflow: -moz-scrollbars-vertical; 
+  overflow-y: scroll;
+}
+
 h1, h2, h3, h4, h5, h6, a, p {
   font-family: 'Source Sans Pro', sans-serif;
 }
